# diff_demo_ros2_control

./: .gitignore  README.md
diff_test_control/: CMakeLists.txt  diff_test_control.xml  package.xml
diff_test_control/bringup/config/: diff_controllers.yaml
diff_test_control/bringup/launch/: diff_test.launch.py
diff_test_control/description/launch/: view_robot.launch.py
diff_test_control/description/ros2_control/: diffbot.ros2_control.xacro
diff_test_control/description/rviz/: diffbot.rviz  diffbot_view.rviz
diff_test_control/description/urdf/: diffbot.materials.xacro  diffbot.urdf.xacro
diff_test_control/include/diff_test_control/: diff_test_system.hpp  visibility_control.h
diff_test_control/src/: diff_test_system.cpp
diff_test_controller/: CMakeLists.txt  diff_test_plugin.xml  package.xml
diff_test_controller/include/diff_test_controller/: diff_test_controller.hpp  odometry.hpp  visibility_control.h
diff_test_controller/src/: diff_test_controller.cpp  diff_test_controller_parameter.yaml  odometry.cpp
